# nav-core

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.claude/agents/: extension-agent.md
docs/: README.md  eskf.md  frames.md  gnss-error.md  ranging.md  rotations.md
examples/: eskf_ins_example.py  trajectory_estimate_type.py
include/navcore/: ekf.hpp  eskf.hpp  frames.hpp  gnss_error.hpp  quaternion.hpp  ranging.hpp
navcore/: __init__.py  estimator.py  types.py
src/: bindings.cpp
tests/cpp/: test_ekf.cpp  test_eskf.cpp  test_frames.cpp  test_gnss_error.cpp  test_quaternion.cpp  test_ranging.cpp
tests/python/: test_bindings.py
